--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,8 @@
 body{
     background-image: url("/images/background.jpg");
     color: #E2E2E2;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 ul{
