--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -17,7 +17,9 @@
     </ul>
 </header>
 
+<span class="center">
 <p>This is a school project for using REST API. This application do GET and POST Requests for api.</p>
 <p>There was a plan to implement User Login and a User panel for more security training but time was an issue.</p>
+</span>
 </body>
 </html>
