--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,6 @@
 body{
     background-image: url("/images/background.jpg");
     color: #E2E2E2;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 ul{
@@ -48,4 +46,10 @@ li a:hover{
     padding-right: 5%;
     font-size: 25px;
     text-decoration: none;
+}
+
+.center{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
