--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -19,7 +19,7 @@
 
 <a href="/addevent" class="addNewEvent"> New Event </a>
 
-<table>
+<table class="Events" th:class="Events">
     <tr>
         <th>Events:</th>
     </tr>
