--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,6 +3,7 @@ body{
     color: #E2E2E2;
 }
 
+/* Menu */
 ul{
     text-align: center;
     text-decoration: none;
@@ -17,6 +18,7 @@ li{
     padding-left: 5%;
 }
 
+/* Link handling */
 li a{
     text-decoration: none;
 }
@@ -32,6 +34,7 @@ li a:hover{
     color: lightslategrey;
 }
 
+/* Event by ID */
 .eventTable{
     margin-left: auto;
     margin-right: auto;
@@ -41,6 +44,7 @@ li a:hover{
     font-size: 25px;
 }
 
+/* New event  */
 .addNewEvent{
     float: right;
     padding-right: 5%;
@@ -48,8 +52,15 @@ li a:hover{
     text-decoration: none;
 }
 
+/* standard centering class */
 .center{
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+}
+
+/* Events */
+
+.Events{
     text-align: center;
 }
