--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -66,9 +66,10 @@ li a:hover{
 }
 
 .Events th{
-    font-size: 20px;
+    font-size: 23px;
 }
 
-.Events a{
-    text-decoration: none;
+.Events a,a:active, a:visited, a:checked{
+    text-decoration: underline;
+    color: #E2E2E2;
 }
