--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -71,5 +71,5 @@ li a:hover{
 
 .Events a,a:active, a:visited, a:checked{
     text-decoration: underline;
-    color: #E2E2E2;
+    color: #ccc1c0;
 }
